--- a/src/app/home/b2b-flows-manage/node-properties/marketplace-selector/marketplace-selector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/marketplace-selector/marketplace-selector.component.html
@@ -6,15 +6,15 @@
         <div class="text-secondary mt-2">Processing</div>
     </div>
 </div>
-<div *ngIf="!currNode.options.node" class="data-format-selector-wrapper">
+<div *ngIf="!currNode.options.plugin" class="data-format-selector-wrapper">
     <div>
         <odp-search-box open="true" (enteredText)="searchNode($event)" (reset)="clearSearch()" tooltipDir="left"
             (keydown.delete)="$event.stopPropagation();">
         </odp-search-box>
     </div>
-    <div *ngIf="customNodeList && customNodeList.length>0" class="list-group my-3">
+    <div *ngIf="pluginList && pluginList.length>0" class="list-group my-3">
         <div class="list-group-item list-group-item-action d-flex align-items-center justify-content-between hover"
-            *ngFor="let item of customNodeList" (click)="toggleItem(!item._selected,item)">
+            *ngFor="let item of pluginList" (click)="toggleItem(!item._selected,item)">
             <div class="d-flex align-items-center">
                 <odp-round-radio [edit]="edit" [checked]="item._selected">
                 </odp-round-radio>
@@ -22,13 +22,13 @@
             </div>
             <span>{{item.attributeCount}}</span>
         </div>
-        <div *ngIf="!customNodeList || customNodeList.length == 0"
+        <div *ngIf="!pluginList || pluginList.length == 0"
             class="list-group-item d-flex align-items-center justify-content-between text-secondary">
-            {{searchTerm && customNodeList ? 'No Node found for the term:' : 'No Node found'}} <span
+            {{searchTerm && pluginList ? 'No Node found for the term:' : 'No Node found'}} <span
                 class="fw-500 text-dark">{{searchTerm}}</span>
         </div>
     </div>
-    <div *ngIf="!customNodeList || customNodeList.length==0" class="list-group my-3">
+    <div *ngIf="!pluginList || pluginList.length==0" class="list-group my-3">
         <div class="list-group-item d-flex align-items-center justify-content-between text-secondary">
             {{searchTerm ? 'No Node found for the term:' : 'No Node found'}} <span
                 class="fw-500 text-dark">{{searchTerm}}</span>
@@ -40,24 +40,24 @@
     </div>
 </div>
 
-<div *ngIf="currNode.options.node">
+<div *ngIf="currNode.options.plugin">
     <div class="form-group position-relative">
         <label class="font-14 fw-400 text-dark" for="nodeName">Name</label>
         <div class="input-wrapper position-relative">
-            <input type="text" id="nodeName" class="form-control" [(ngModel)]="currNode.options.node.name" readonly>
+            <input type="text" id="nodeName" class="form-control" [(ngModel)]="currNode.options.plugin.name" readonly>
             <span class="dsi dsi-minus-circle text-danger position-absolute hover"
-                (click)="currNode.options.node=null"></span>
+                (click)="currNode.options.plugin=null"></span>
         </div>
     </div>
     <div class="form-group position-relative">
         <label class="font-14 fw-400 text-dark" for="nodeType">Sub Type</label>
-        <input type="text" id="nodeType" class="form-control" [(ngModel)]="currNode.options.node.type" readonly>
+        <input type="text" id="nodeType" class="form-control" [(ngModel)]="currNode.options.plugin.type" readonly>
     </div>
-    <div *ngIf="currNode.options.node.params && currNode.options.node.params.length > 0"
+    <div *ngIf="currNode.options.plugin.params && currNode.options.plugin.params.length > 0"
         class="form-group position-relative">
         <label class="font-14 fw-400 text-dark" for="nodeType">Params</label>
         <div class="pl-2">
-            <ng-container *ngFor="let item of currNode.options.node.params">
+            <ng-container *ngFor="let item of currNode.options.plugin.params">
                 <div class="form-group">
                     <label [attr.for]="item.key">{{item.label}}</label>
                     <input class="form-control" *ngIf="item.htmlType=='input'" [type]="item.dataType"
