Styled text issue

--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/target-fields/target-fields.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/target-fields/target-fields.component.html
@@ -23,7 +23,7 @@
 <div id="formula" *ngIf="toggleVal">
     <div (keydown.delete)="$event.stopPropagation();">
         <odp-styled-text [value]="definition.formula" [useEditableDiv]="true" className="input-height"
-            (finalValue)="tempDataChange($event)" [suggestions]="suggestions" [insertText]="insertText">
+            (finalValue)="tempDataChange($event)" [suggestions]="suggestions">
         </odp-styled-text>
     </div>
 </div>
