--- a/src/app/utils/field-type/field-type.component.html
+++ b/src/app/utils/field-type/field-type.component.html
@@ -1,6 +1,7 @@
 <div class="d-flex align-items-center text-dark">
-    <span class="dsi dsi-sm {{getClass()}} d-flex align-items-center justify-content-center text-accent"
-        [ngClass]="{'field-type-badge': !onMapper}"></span>
+    <span class="dsi dsi-sm {{getClass()}} d-flex align-items-center justify-content-center"
+        [ngClass]="{'field-type-badge rounded circle': !onMapper, 'text-accent': onMapper}"
+        [ngStyle]="{'background-color': !onMapper && getStyle()}"></span>
     <span *ngIf="label" class="text-dark ml-2">{{getLabel()}}</span>
     <!-- <ng-container *ngIf="collectionType">
         <span class="text-dark mx-2">of</span>
