--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/source-fields/source-fields.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/source-fields/source-fields.component.html
@@ -1,4 +1,4 @@
-<div class="field-wrapper border rounded">
+<div class="">
     <div class="field-row d-flex align-items-center mb-1">
         <div class="attribute-type-holder d-flex align-items-center justify-content-center">
             <odp-field-type [field]="definition" [onMapper]="true"></odp-field-type>
