--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.scss
@@ -10,15 +10,20 @@
         width: 60vw;
 
         .source-list {
-            width: 300px;
+            min-width: 300px;
+            max-width: 300px;
         }
 
         .mapping-paths {
-            width: calc(100% - 650px);
+            // min-width: calc(100% - 650px);
+            // max-width: calc(100% - 650px);
+            min-width: 140px;
+            max-width: 140px;
         }
 
         .target-list {
-            width: 348px;
+            min-width: 348px;
+            max-width: 348px;
         }
     }
 }
@@ -73,7 +78,8 @@ path {
 }
 
 .method-list {
-    width: 300px;
+    min-width: 300px;
+    max-width: 300px;
 }
 
 .method-drop {
