--- a/src/app/home/b2b-flows-manage/node-properties/node-properties.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/node-properties.component.scss
@@ -7,7 +7,7 @@
     top: 0px;
     right: -800px;
     z-index: 3;
-    width: 800px;
+    min-width: 800px;
     height: 100vh;
     overflow-y: auto;
     transition: 0.2s;
@@ -25,8 +25,8 @@
 
 .node-coding-window {
     right: -80vw;
+    min-width: 80vw;
     max-width: 80vw;
-    width: 80vw;
 }
 
 
