--- a/src/app/utils/structure-field-properties/structure-field-properties.component.scss
+++ b/src/app/utils/structure-field-properties/structure-field-properties.component.scss
@@ -32,6 +32,9 @@
     &.password {
       background: $dark;
     }
+    &.schema-free {
+      background: $warning;
+    }
   }
 
   .schemaProperties-header {
