--- a/src/app/home/b2b-flows-manage/node-properties/input-data-selector/input-data-selector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/input-data-selector/input-data-selector.component.html
@@ -1,10 +1,10 @@
 <div class="mt-2 w-100">
     <div class="header-item px-2 py-1 text-left d-flex align-items-center justify-content-between border rounded">
         <span class="text-secondary" *ngIf="!data">Configure</span>
-        <ng-container *ngIf="data">
-            <span class="text-dark" *ngIf="isCustomBody">{{bodyFieldsCount}} Attributes</span>
-            <span class="text-dark" *ngIf="!isCustomBody" [innerHTML]="userSelectedValue"></span>
-        </ng-container>
+        <span *ngIf="data" class="d-flex" style="max-width: 240px">
+            <span class="text-dark text-truncate" *ngIf="isCustomBody">{{bodyFieldsCount}} Attributes</span>
+            <span class="text-dark text-truncate" *ngIf="!isCustomBody" [innerHTML]="userSelectedValue"></span>
+        </span>
         <div class="d-flex align-items-center justify-content-end">
             <span *ngIf="data"
                 class="icon dsi dsi-minus-circle text-danger hover d-flex align-items-center justify-content-center"
@@ -51,7 +51,8 @@
             </span>
             <div *ngIf="!userSelectedValue" class="list-group my-3">
                 <ng-container *ngFor="let item of nodeList; let i=index">
-                    <div *ngIf="i!=nodeList.length-1" class="list-group-item list-group-item-action d-flex align-items-center justify-content-between hover"
+                    <div *ngIf="i!=nodeList.length-1"
+                        class="list-group-item list-group-item-action d-flex align-items-center justify-content-between hover"
                         (click)="selectNodeBody(item,'body')">
                         <div class="d-flex align-items-center justify-content-start">
                             <odp-round-radio [edit]="edit" [checked]="item._selected">
