--- a/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
+++ b/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
@@ -132,6 +132,11 @@
                 <span class="node-icon font-16 fw-400 dsi dsi-invoke-api mr-2"></span>
                 <span class="font-13 fw-400">Invoke API</span>
             </div>
+            <!-- <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center hover"
+                (click)="addNode($event,'API', true)">
+                <span class="node-icon font-16 fw-400 dsi dsi-api-reciever mr-2"></span>
+                <span class="font-13 fw-400">API Receiver</span>
+            </div> -->
             <div class="node-item px-3 py-2 d-flex align-items-center hover" (click)="addNode($event,'RESPONSE')">
                 <span class="node-icon font-16 fw-400 dsi dsi-response mr-2"></span>
                 <span class="font-13 fw-400">Response</span>
